--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/foundry-devops"]
+	path = lib/foundry-devops
+	url = https://github.com/chainaccelorg/foundry-devops
+[submodule "lib/Foundry-devops"]
+	path = lib/Foundry-devops
+	url = https://github.com/Cyfrin/Foundry-devops
